--- a/planning/Vorgehensweise/vorgehensweise.tex
+++ b/planning/Vorgehensweise/vorgehensweise.tex
@@ -24,12 +24,12 @@ bibtotocnumbered,
 
 \subtitle{\normalfont{Fachpraktikum 1597 an der FernUni Hagen im SS 2017:\protect\\Parallele Programmierung }}
 
-\title{\normalfont{Vorgehensweise zur Erkennung von möglichen Notlandefeldern aus Höhendaten}} % The article title
+\title{\normalfont{Vorgehensweise zur Erkennung von möglichen Notlandefeldern aus Höhendaten mittels POSIX Thread Implementation}} % The article title
 %\title{\normalfont\spacedallcaps{Asnychrone Programmierung: \protect\\ Moderne Methoden in ECMAScript~6}} % The article title
 
 
 
-\author{Felix Eckstein*, Dr. Björn Wittlich**} % The article author(s) 
+\author{Felix Eckstein*, Dr. Björn Wittich**} % The article author(s) 
 
 \date{Juni 2017} % An optional date to appear under the author(s)
 
@@ -54,7 +54,7 @@ bibtotocnumbered,
 	
 	\subsection{Kriterien für geeignete Notlandeflächen}
 	
-	Zunächst muss definiert werden, was eine geeignete Landefläche ausmacht, und wie sie charakterisiert werden kann. Es ist sofort einsichtig, dass eine Landebahn auf einer ausreichend großen Fläche glatt und eben sein muss. Die Fläche wird durch eine Mindestlänge und eine Mindestbreite charakterisiert. Daraus ergibt sich auch direkt eine Richtung. Als globale Parameter einer Landebahn sind also folgende Daten festzuhalten:
+	Zunächst muss definiert werden, was eine geeignete Landefläche ausmacht und wie sie charakterisiert werden kann. Es ist sofort einsichtig, dass eine Landebahn auf einer ausreichend großen Fläche glatt und eben sein muss. Die Fläche wird durch eine Mindestlänge und eine Mindestbreite charakterisiert. Daraus ergibt sich auch direkt eine Richtung. Als globale Parameter einer Landebahn sind also folgende Daten festzuhalten:
 	\begin{itemize}
 		\item Richtung der Bahn
 		\item Breite
