--- a/planning/Vorgehensweise/vorgehensweise.tex
+++ b/planning/Vorgehensweise/vorgehensweise.tex
@@ -299,8 +299,8 @@ Der große Vorteil eines solchen Verfahrens ist die sehr einfache Implementierun
 
 \subsection{Datenstrukturen während der Durchmusterung}
 
-Wie bereits im Abschnitt \ref{Einfache_Durchmusterung} erwähnt, kann der Ausschluss eines Punktes auf Grund Verletzung eines Kriteriums beim Durchmustern in Richtung $a$ nicht dazu herangezogen werden, dass dieser Punkt auf nicht Teil einer Landbahn in Richtung $b$ sein. Das kann man sich gut an dem Extremfall einer steilen Geländekante verdeutlichen: In Querrichtung zur Geländekante reißen zwei benachbarte Punkte das Holprigskeitskriterkium, doch können beide Punkte jeweils noch Teil einer Landebahn entlang der Geländekante sein.
-Aus diesen Überlegungen resultiert, dass auch wenn mehrere Threads ein und dieselbe Geländekachel bearbeiten, sie relativ wenige nützliche Befunde sinnvoll teilen / verwenden können. Da die Implementation auch das vorgegeben beliebiger Durchmusterungswinkel zulässt, sollte jeder Thread ein separates Objekt pflegen, in dem er lokale Informationen ablegen und Geländepunktinformationen speichern kann. 
+Wie bereits im Abschnitt \ref{Einfache_Durchmusterung} erwähnt, kann aus dem Ausschluss eines Punktes auf Grund der Verletzung eines Kriteriums beim Durchmustern in einer beliebigen Richtung $a$ nicht unmittelbar geschlossen werden, dass dieser Punkt nicht Teil einer Landbahn in einer weiteren Richtung $b$ sein. Das kann man sich gut an dem Extremfall einer steilen Geländekante verdeutlichen: Orthogonal zur Geländekante reißen zwei benachbarte Punkte das Holprigskeitskriterium, doch können beide Punkte jeweils Teil einer Landebahn parallel zu dieser Geländekante sein.
+Aus diesen Überlegungen resultiert, dass auch, wenn mehrere Threads ein und dieselbe Geländekachel bearbeiten, sie relativ wenige nützliche Befunde sinnvoll teilen / verwenden können. Da die Implementation auch das Vorgegeben beliebiger Durchmusterungswinkel zulässt, sollte jeder Thread ein separates Objekt pflegen, in dem er lokale Informationen ablegen und Geländepunktinformationen speichern kann. 
 Einen Sonderfall stellen sicher die Kartengeopunkte selbst dar. Diese werden von allen Threads lediglich lesend benötigt. Da diese zudem die sicherlich größte persistente Datenmenge darstellen, ist darauf zu achten, diese nur möglichst kurz und nicht mehrfach im Speicher zu halten sind. Deswegen ist die Idee, eine Klasse zu implementieren, die sich ausschließlich mit der Verwaltung der Daten im Speicher (also einlesen und freigeben, Darstellung von NICHT-Kartenpunkten / NULL - Werte an Kartenrändern ) beschäftigt, während die Threads einen Zeiger/Referenz auf dieses Datenobjekt besitzen. Es muss sichergestellt werden, dass so lange ein Thread noch Zugriff auf eine Kachel benötigt, diese auch noch verfügbar sein muss. Zum jetzigen Zeitpunkt ist noch nicht völlig überschaubar, welche zusätzlichen Daten bei der Durchmusterung vorgehalten werden müssen. Dieses wird aber sicherlich in das Datenobjekt der Klasse einfließen.
 
 \section{Datenhaltung gefundener Notlandeflächen}
