--- a/planning/Vorgehensweise/vorgehensweise.tex
+++ b/planning/Vorgehensweise/vorgehensweise.tex
@@ -49,9 +49,9 @@ bibtotocnumbered,
 
 \section{Vorgehensweise zur Erkennung von möglichen Notlandefeldern aus Höhendaten}
 
-	\subsection{Grundsätzliche Überlegungen}
-	
-	
+%	\subsection{Grundsätzliche Überlegungen}
+%	
+%	
 	\subsection{Kriterien für geeignete Notlandeflächen}
 	
 	Zunächst muss definiert werden, was eine geeignete Landefläche ausmacht und wie sie charakterisiert werden kann. Es ist sofort einsichtig, dass eine Landebahn auf einer ausreichend großen Fläche glatt und eben sein muss. Die Fläche wird durch eine Mindestlänge und eine Mindestbreite charakterisiert. Daraus ergibt sich auch direkt eine Richtung. Als globale Parameter einer Landebahn sind also folgende Daten festzuhalten:
@@ -67,7 +67,7 @@ bibtotocnumbered,
 	Eine Landebahn kann durch einen Satz von Steigungsdaten charakterisiert werden:
 	\begin{itemize}
 		\item "`global"': Eine Landebahn darf auf Ihrer gesamten Länge nicht über ein gewisses Maß hinaus ansteigen. Ein Flugzeug kann nicht zu stark bergauf und auch nicht bergab landen. Es muss also für die gesamte minimale Bahnlänge ein maximaler Anstieg und ein maximaler Abfall vorgegeben werden.
-		\item "`lokal"': Für (deutlich) kürzere Strecken als die Gesamtbahnlänge ist ein anderer Satz von maximalen/minimalen Steigungslimits notwendig, welche die maximale "`Holprigkeit"' der potentiellen Bahn beschreiben.
+		\item "`lokal"': Für (deutlich) kürzere Strecken als die Gesamtbahnlänge ist ein anderer Satz von maximalen Steigungslimits notwendig, welche die maximale "`Holprigkeit"' der potentiellen Bahn beschreiben.
 		\item "`Querneigung"': Eine optimale Landebahn ist senkrecht zur langen Achse perfekt eben. Eine reale Bahn darf geneigt bzw. in sich "`verwunden"' sein, solange kein kritischer Grenzwert für diese Querneigung überschritten wird. Diese maximale Querneigung wird über die Mindestbreite der Bahn angegeben.
 		\item "`Verwindung"': Die Änderung der Querneigung darf sicherlich ein bestimmtes Limit nicht überschreiten. Es sollte also nicht die maximale "`Linksneigung"' direkt auf die maximale "`Rechtsneigung"' folgen.
 %		TODO: Bei diesem Kriterium müssen wir uns nochmal überlegen, ob wir das tatsächlich mit aufnehmen wollen. Ist aber auch nicht schwierig zu implementieren. 
@@ -103,7 +103,7 @@ bibtotocnumbered,
 
 \section{Datenbasis}
 
-Die Höhedaten liegen in Form eines GeoTIFF Formats vor. Dabei handelt es sich um ein Rasterformat, bei dem jedem Rasterpunkt bestimmte Geodaten zugeordnet werden. Diese Daten werden in dem Grafikformat anstelle der normalerweise enthaltenen Farbwerte gespeichert und müssen entsprechend ihrer Bedeutung interpretiert werden. Prinzipiell ist es möglich mehrere Werte pro Rasterpunkt zu speichern. In unserem Fall ist für jeden Rasterpunkt die Höhe über normal Null in Metern angegeben. Dieser Wert liegt als einfach genaue 32bit Gleitkommazahl vor.
+Die Höhedaten liegen in Form einer GeoTIFF Datei vor. Dabei handelt es sich um ein Rasterformat, bei dem jedem Rasterpunkt bestimmte Geodaten zugeordnet werden. Diese Daten werden in dem Grafikformat anstelle der normalerweise enthaltenen Farbwerte gespeichert und müssen entsprechend ihrer Bedeutung interpretiert werden. Prinzipiell ist es möglich mehrere Werte pro Rasterpunkt zu speichern. In unserem Fall ist für jeden Rasterpunkt die Höhe über normal Null in Metern angegeben. Dieser Wert liegt als einfach genaue 32bit Gleitkommazahl vor.
 
 Für die Kodierung und Komprimierung der Werte wird das bekannte TIFF Format eingesetzt, das insbesondere auch die verlustlose Speicherung unterstützt.
 
@@ -167,7 +167,7 @@ Die Steigungsüberprüfung erfolgt immer vorwärts gerichtet und berechnet den Q
 	\fbox{\begin{minipage}{\textwidth}
 		{\bfseries\textsf{Brute Force:}}
 		\begin{itemize}
-			\item Berechne für jeden Punkt die Steigungsmaße für die vorgegebenen Vorausschaulängen und speichere sie pro Punkt.
+			\item Berechne für jeden Punkt entlang einer Bahn in der gewünschten Richtung die Steigungsmaße für die vorgegebenen Vorausschaulängen und speichere sie pro Punkt.
 			\begin{itemize}
 				\item Gesamtsteigung
 				\item Holprigkeit
@@ -256,7 +256,9 @@ Die Steigungsüberprüfung erfolgt immer vorwärts gerichtet und berechnet den Q
 
 \subsection{Optimierung}
 
-Das vorgestellte Verfahren geht stumpf über jeden Punkt der Daten und versucht dann zusammenhängende geeignete Punkte zu erkennen. Bei den zu erwartenden großen (weil hochaufgelösten) Datensätzen sollten soviele Punkte wie möglich so früh wie möglich ausgeschlossen werden um den Rechenaufwand so gering wie möglich zu halten.
+Das vorgestellte Verfahren geht stumpf über jeden Punkt der Daten und versucht dann zusammenhängende geeignete Punkte zu erkennen. Bei den zu erwartenden großen (weil hochaufgelösten) Datensätzen sollten so viele Punkte wie möglich so früh wie möglich ausgeschlossen werden um den Rechenaufwand so gering wie möglich zu halten.
+
+\skippingparagraph
 
 Idee zur Optimierung:
 
@@ -280,7 +282,7 @@ Diese Optimierung bringt nur etwas, wenn die Vorausschaulänge kleiner als die m
 
 
 \subsection{Kachelränder}
-Es wird der Zeitpunkt kommen, dass die betrachtete Karte nicht mehr komplett in den Speicher passt. Sei es durch Ausdehnung des Gebiets oder durch Steigerung der Auflösung. Dann muss die Karte gekachelt werden. Es ist zu klären, wie mit den Randbereichen zwischen zwei Kacheln umgegangen wird und wie es möglich wird an den Rändern zweier Kacheln zwei zu kurze Bahnen zu einer ausreichend langen zusammenzufügen. Es muss ein "`Randprotokoll"' entwickelt werden. Ein solches könnte auch zum Übergang von shared memory Systemen auf lose gekoppelte Parallelrechner (MPI) benutzt werden.
+Es wird der Zeitpunkt kommen, dass die betrachtete Karte nicht mehr komplett in den Speicher passt. Sei es durch Ausdehnung des Gebiets oder durch Steigerung der Auflösung. Dann muss die Karte gekachelt werden. Es ist zu klären, wie mit den Randbereichen zwischen zwei Kacheln umgegangen wird und wie es möglich wird an den Rändern zweier Kacheln zwei zu kurze Bahnen zu einer ausreichend langen Bahn zusammenzufügen. Es muss ein "`Randprotokoll"' entwickelt werden. Ein solches könnte auch zum Übergang von shared memory Systemen auf lose gekoppelte Parallelrechner (MPI) benutzt werden.
 
 Im ersten Ansatz ist es allerdings ausreichend, wenn die auf einmal durchsuchten Kacheln ausreichend große Überlappungen aufweisen.
 
@@ -292,7 +294,7 @@ In der folgenden Grafik ist das Prinzip dargestellt: Die Länge der gezeigten Pf
 
 Der große Vorteil eines solchen Verfahrens ist die sehr einfache Implementierung. Dem stehen zwei Nachteile entgegen:
 \begin{itemize}
-	\item Die Übberlappungsbereiche müssen zweimal in den Speicher geladen werden. Einige Tests werden im Überlappungsbereich doppelt ausgeführt. Das ist nicht schlimm, solange die Kacheln groß gegenüber dem Überlappungsbereich sind. Davon kann in der Praxis ausgegangen werden.
+	\item Die Überlappungsbereiche müssen zweimal in den Speicher geladen werden. Einige Tests werden im Überlappungsbereich doppelt ausgeführt. Das ist nicht schlimm, solange die Kacheln groß gegenüber dem Überlappungsbereich sind. Davon kann in der Praxis ausgegangen werden.
 	\item Eine lange Bahn (in der Grafik pink) wird nicht als eine einzelne lange Bahn, sondern als zwei einzelne (in der Grafik hellblau und ocker) überlappende Bahnen erkannt. Auch das ist nicht schlimm, da jede einzeln für sich genommen noch lang genug ist und daher als Notlandebahn in Frage kommt.
 \end{itemize}
 
@@ -317,7 +319,7 @@ Besser wäre es, wenn sich überlappende Bahnen zu einer einzigen Landefläche m
 
 \subsection{Auswahl der Datenbank}
 
-Es soll eine Datenbank ausgewählt werden, die Geodaten unterstützt. Offenbar hat sich als Format für Geo-Daten das Format \href{http://geojson.org/}{GeoJSON} etabliert. Eine Datenbank, die dieses Format und spezielle Abfragen darauf unterstützt ist z. B. \href{https://docs.mongodb.com/}{MongoDB}.
+Es soll eine Datenbank ausgewählt werden, die Geodaten unterstützt. Offenbar hat sich als Format für Geodaten das Format \href{http://geojson.org/}{GeoJSON} etabliert. Eine Datenbank, die dieses Format und spezielle Abfragen darauf unterstützt ist z. B. \href{https://docs.mongodb.com/}{MongoDB}.
 
 In diese Datenbank sollen gefundene Landeflächen als Polygonumriss mit ihrer Richtung eingetragen werden.
 
@@ -329,7 +331,7 @@ MongoDB unterstützt auch eine Abfrage \href{https://docs.mongodb.com/manual/ref
 
 Falls dies der Fall ist, können alle überlappenden Landeflächen einer Richtung zu einem gemeinsamen Objekt zusammengefasst werden. Diese Zusammenfassung kann in einem eigenen Prozess durchgeführt werden. 
 
-Der genaue Algorithmus zum Merge mehrerer Polygone muss noch erarbeitet werden. Dabei kann man sich zunutze machen, dass die Rechtecke einer einzelnen Bahn immer entlang der Durchmusterungsrichtung verlaufen und nur dazu senkrechte und parallele Linien vorkommen können. 
+Der genaue Algorithmus zum Merge mehrerer Polygone muss noch erarbeitet werden. Dabei kann man sich zunutze machen, dass die Recht\-ecke einer einzelnen Bahn immer entlang der Durchmusterungsrichtung verlaufen und nur dazu senkrechte und parallele Linien vorkommen können. 
 
 \section{Benutzung und Visualisierung}
 
@@ -344,14 +346,14 @@ Es bietet sich an, das System über einen Webbrowser zu steuern. Dazu sind im We
 Es bietet sich an auf die frei verfügbaren Daten und die Visualisierung von OpenStreetmap (OSM) zurückzugreifen. 
 
 Zur Bereichsauswahl des zu durchmusternden Bereichs soll die Ausdehnung/Überdeckung eines Datensatzes als Overlay in OSM eingeblendet werden. (TODO: entscheide, ob lediglich die rechteckige Bounding Box der Koordinaten, oder aber die echte Kontur eingeblendet werden soll.)
-In OSM kann mittels \href{http://wiki.openstreetmap.org/wiki/Bounding_Box}{"`boundingBox"'} eine Auswahl erfolgen. Es wird ein Rechteck in Geo-Koordinaten zurückgegeben. Wenn diese Geo-Koordinaten in Pixel umgerechnet sind, dann kann der entsprechende Bereich –entweder am Stück, oder gekachelt– eingelesen und durchmustert werden. 
+In OSM kann mittels \href{http://wiki.openstreetmap.org/wiki/Bounding_Box}{boundingBox} eine Auswahl erfolgen. Es wird ein Rechteck in Geo-Koordinaten zurückgegeben. Wenn diese Geo-Koordinaten in Pixel umgerechnet sind, dann kann der entsprechende Bereich –entweder am Stück, oder gekachelt– eingelesen und durchmustert werden. 
 
 \includegraphics[width=\textwidth]{./drawings/AuswahlKartenausschnitt.png}
 
 Für die Visualisierung bietet sich eine kleine JavaScript-Anwendung an, die die Darstellung im Browser übernimmt. Damit kann auf Standardtechnologien zurückgegriffen werden und es muss nicht zu viel Hirnschmalz in die Visualisierung und eine Benutzeroberfläche gesteckt werden. 
 Eine JavaScript-Webseite kann selbständig auf die Datenbank zugreifen und so die gefundenen Landeflächen in OSM als Polygone in die Karte einblenden. 
 
-Als Bibliothek zur Realisierung einer solchen Funktionalität scheint \href{http://leafletjs.com/examples.html }{Leaflet} geignet und ausreichend leicht in der Benutzung.
+Als Bibliothek zur Realisierung einer solchen Funktionalität scheint \href{http://leafletjs.com/examples.html }{Leaflet} geeignet und ausreichend einfach in der Benutzung zu sein.
 
 
 
@@ -368,6 +370,7 @@ Nachteilig bei diesem Verfahren ist leider der recht hohe Speicherbedarf, da bei
 \skippingparagraph
 
 Bei genauerer Betrachtung fällt auf, dass nicht nur die einzelnen Richtungen bei der Durchmusterung vollständig unabhängig voneinander sind, sondern auch die Durchmusterung entlang jedes einzelnen Durchmusterungsstrahls. Das heißt, dass es leicht möglich ist, jedem Thread die Durchmusterung entlang eines einzelnen Durchmusterungsstrahls aufzugeben. Bei bekannter Anzahl der Threads kann im voraus statisch festgelegt werden, welcher Thread sich entlang welchen Strahls bewegen soll. Laufzeitmessungen in der Praxis können zeigen, ob ein dynamischer Workpoolansatz notwendig ist um die Last besser aufzuteilen. Intuitiv scheint das nicht notwendig, da nicht zu erwarten ist, dass die einzelnen Durchmusterungen sehr große Schwankungen bezüglich der Rechenzeiten aufweisen. Die Praxis wird zeigen, ob diese Annahme korrekt ist.
+
 Zur Verbesserung des Speed-Ups ist angedacht, die Parallelisierung dahingehend zu verbessern, dass Threads, die in der aktuellen Kachel nichts mehr zu erledigen haben bereits mit dem Durchmustern der nächsten Kachel beginnen können. Dies könnte man leicht unter Zuhilfenahme eines Semaphores erreichen (entfernen der vorhin angedeuten Barrier). Hier ist allerdings zu evaluieren, wie sich die Hinzunahme weiterer Kacheln in den Speicher auf dessen Verbrauch auswirkt. Im Worst-Case könnten bei $n$-Threads $n$-Kacheln im Speicher gehalten werden müssen.
 
 
