--- a/planning/Bericht/Bericht.tex
+++ b/planning/Bericht/Bericht.tex
@@ -122,5 +122,16 @@ Ist eines dieser Abbruchkriterien erfüllt, wird überprüft, ob das Ensemble an
 Dann wird eine Subroutine find\_best\_planes() aufgerufen, welche innerhalb der gefunden Liste an zusammenhängenden Punkten zwei Landebahnen ermittelt. Zum einen wird die längste Bahn, die das Steigungskriterium erfüllt ermittelt und des weiteren die Landebahn, die die geringste Varianz aufweist uind trotzdem noch die geforderte Mindestlänge erreicht. 
 Beide Bahnen werden dann, so fern vorhanden, in eine Mongo DB geschrieben.
 
+\section{Bestimmung des Speedups}
+
+Um den Speedup zu bestimmen, wurde analysiert, wie sich die Laufzeit mit zunehmender Anzahl an Threads verändert. So lange die Bearbeitung einer einzelnen Bahn viel länger dauert als die in der kritischen Sektion benötigte Zeit, um einen neuen Startpunkt zu bestimmen, sollten die Threads nicht blockiert sein.
+Bei Winkeln, die ein vielfaches von 90\° betragen, sind alle Landebahnen gleich lang --- also sind gleich viele Punkte zu analyisieren.
+Bei Bahnen, die diagonal verlaufen, sind die ersten Bahnen kurz, nehmen dann in ihrer Länge zu, bis als Startpunkt die nächstliegende Ecke  erreicht ist, und nimmt dann in ihrer Länge wieder ab. Weiterhin ist zu beachten, dass je nach Topologie der Bahn unterschiedlich viele (im Grenzfall) gar keine geeigneten Flächen gefunden werden, die dann feingranular weiter untersucht werden müssen (längste und mit der kleinsten Varianz) so ist schwer vorhersagbar, wie lange die Einzellaufzeit eines Threads ist.
+Für die zur Verfügung gestellten kartendaten von Nordhein-Westfalen sind die Laufzeiten in Abhängigkeit von Winkel und Threadanzahl in Tabelle x dargestellt. Das verwendete System zur Analyse war eine virtualisierte VM (Centos 7.0, xx CPUs, xx GB RAM) 
+
+\section{Analyse mittels Profiler}
+
+\section{Einfluss von Compiler Direktiven (speziell Optimizer)}
+
 
 \end{document}
